--- a/IRDb_NQM/Base.lproj/LaunchScreen.storyboard
+++ b/IRDb_NQM/Base.lproj/LaunchScreen.storyboard
@@ -18,12 +18,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="irdblogo" translatesAutoresizingMaskIntoConstraints="NO" id="uG5-Zi-3EH">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="irdblogo" translatesAutoresizingMaskIntoConstraints="NO" id="uG5-Zi-3EH">
                                 <rect key="frame" x="161" y="320" width="53" height="26"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.96078431372549022" green="0.76862745098039209" blue="0.28235294117647058" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="uG5-Zi-3EH" secondAttribute="bottom" constant="321" id="4MI-ev-DDS"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uG5-Zi-3EH" secondAttribute="trailing" constant="161" id="7CV-Kb-VSf"/>
+                            <constraint firstItem="uG5-Zi-3EH" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="300" id="Hod-Df-cnV"/>
+                            <constraint firstItem="uG5-Zi-3EH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="161" id="ZPa-24-kHB"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
