--- a/IRDb_NQM/Base.lproj/Main.storyboard
+++ b/IRDb_NQM/Base.lproj/Main.storyboard
@@ -17,6 +17,7 @@
                     <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="Pmd-2v-anx">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.44705882352941179" green="0.44705882352941179" blue="0.44705882352941179" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <connections>
                         <segue destination="7bK-jq-Zjz" kind="relationship" relationship="rootViewController" id="tsl-Nk-0bq"/>
@@ -51,6 +52,22 @@
                                             <constraint firstAttribute="trailing" secondItem="Aji-uz-Kba" secondAttribute="trailing" constant="8" id="g92-Rh-CC4"/>
                                         </constraints>
                                     </view>
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kMU-Tv-ufS">
+                                        <rect key="frame" x="120" y="149" width="247" height="50"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xSd-cg-NNm">
+                                                <rect key="frame" x="0.0" y="0.0" width="247" height="50"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Cast List">
+                                                    <color key="titleColor" red="0.96078431369999995" green="0.76862745099999996" blue="0.28235294119999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="castList:" destination="JEX-9P-axG" eventType="touchUpInside" id="OEm-mY-lfb"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.50196078431372548" green="0.50196078431372548" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
+                                    </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="TV/Movie Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qf0-KB-hie">
                                         <rect key="frame" x="120" y="8" width="215" height="40"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -58,30 +75,29 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Runtime" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hbe-Ib-97J">
-                                        <rect key="frame" x="120" y="56" width="98" height="33"/>
+                                        <rect key="frame" x="123" y="56" width="91" height="27"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="TV Series/Movie" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Apn-fR-eEJ">
-                                        <rect key="frame" x="120" y="97" width="125" height="21"/>
+                                        <rect key="frame" x="120" y="91" width="125" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Studio/Network" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QSS-vg-7XB">
-                                        <rect key="frame" x="120" y="126" width="105" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Episode #" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a3S-Da-ibx">
-                                        <rect key="frame" x="291" y="93" width="76" height="21"/>
+                                        <rect key="frame" x="291" y="91" width="76" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Studio/Network" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QSS-vg-7XB">
+                                        <rect key="frame" x="120" y="120" width="105" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -89,8 +105,12 @@
                                 <color key="backgroundColor" red="0.25098039215686274" green="0.25098039215686274" blue="0.25098039215686274" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="4US-HX-dkU" firstAttribute="leading" secondItem="eNB-V6-ydQ" secondAttribute="leading" constant="8" id="Dko-oZ-bSm"/>
+                                    <constraint firstItem="kMU-Tv-ufS" firstAttribute="top" secondItem="QSS-vg-7XB" secondAttribute="bottom" constant="8" id="JWy-Uw-y0j"/>
+                                    <constraint firstAttribute="trailing" secondItem="kMU-Tv-ufS" secondAttribute="trailing" constant="8" id="Jn5-ff-ksB"/>
                                     <constraint firstItem="Qf0-KB-hie" firstAttribute="leading" secondItem="4US-HX-dkU" secondAttribute="trailing" constant="8" id="Wlj-7A-SxF"/>
+                                    <constraint firstAttribute="bottom" secondItem="kMU-Tv-ufS" secondAttribute="bottom" constant="8" id="eQY-d3-u7P"/>
                                     <constraint firstAttribute="bottom" secondItem="4US-HX-dkU" secondAttribute="bottom" constant="8" id="hYk-LO-qFm"/>
+                                    <constraint firstItem="kMU-Tv-ufS" firstAttribute="leading" secondItem="4US-HX-dkU" secondAttribute="trailing" constant="8" id="rJB-ko-XV0"/>
                                     <constraint firstItem="4US-HX-dkU" firstAttribute="top" secondItem="eNB-V6-ydQ" secondAttribute="top" constant="8" id="sj2-0s-Ufr"/>
                                 </constraints>
                             </view>
@@ -123,6 +143,10 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Detail" id="mOI-FS-AaM"/>
                     <connections>
+                        <outlet property="mediaClassification" destination="Apn-fR-eEJ" id="pcx-Jv-FLn"/>
+                        <outlet property="mediaEpisodeNum" destination="a3S-Da-ibx" id="omU-mJ-AKX"/>
+                        <outlet property="mediaProducer" destination="QSS-vg-7XB" id="gAK-ei-epa"/>
+                        <outlet property="mediaRuntime" destination="hbe-Ib-97J" id="hUt-Ok-tZI"/>
                         <outlet property="mediaTitle" destination="Qf0-KB-hie" id="zmh-oh-uhJ"/>
                     </connections>
                 </viewController>
