I FIXED EVERYTHING :D But I have no idea how constraints work

--- a/IRDb_NQM/Base.lproj/Main.storyboard
+++ b/IRDb_NQM/Base.lproj/Main.storyboard
@@ -47,9 +47,13 @@
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="Aji-uz-Kba" secondAttribute="bottom" constant="8" id="2h2-Dq-v8k"/>
+                                            <constraint firstItem="Aji-uz-Kba" firstAttribute="top" secondItem="4US-HX-dkU" secondAttribute="top" constant="8" id="7JI-U4-7PW"/>
                                             <constraint firstItem="Aji-uz-Kba" firstAttribute="leading" secondItem="4US-HX-dkU" secondAttribute="leading" constant="8" id="AoS-0a-0UO"/>
                                             <constraint firstItem="Aji-uz-Kba" firstAttribute="top" secondItem="4US-HX-dkU" secondAttribute="top" constant="8" id="Ffk-pf-eC7"/>
+                                            <constraint firstAttribute="trailing" secondItem="Aji-uz-Kba" secondAttribute="trailing" constant="8" id="Lrh-rR-Rrm"/>
                                             <constraint firstAttribute="trailing" secondItem="Aji-uz-Kba" secondAttribute="trailing" constant="8" id="g92-Rh-CC4"/>
+                                            <constraint firstItem="Aji-uz-Kba" firstAttribute="leading" secondItem="4US-HX-dkU" secondAttribute="leading" constant="8" id="pTc-jd-01s"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kMU-Tv-ufS">
@@ -69,21 +73,13 @@
                                         <color key="backgroundColor" red="0.50196078431372548" green="0.50196078431372548" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="TV/Movie Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qf0-KB-hie">
-                                        <rect key="frame" x="120" y="8" width="215" height="40"/>
+                                        <rect key="frame" x="120" y="8" width="215" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Runtime" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hbe-Ib-97J">
-                                        <rect key="frame" x="123" y="56" width="91" height="27"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="TV Series/Movie" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Apn-fR-eEJ">
-                                        <rect key="frame" x="120" y="91" width="125" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Runtime" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hbe-Ib-97J">
+                                        <rect key="frame" x="123" y="36.5" width="91" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -101,16 +97,32 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="TV Series/Movie" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Apn-fR-eEJ">
+                                        <rect key="frame" x="120" y="65" width="125" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" red="0.25098039215686274" green="0.25098039215686274" blue="0.25098039215686274" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
+                                    <constraint firstItem="Apn-fR-eEJ" firstAttribute="top" secondItem="hbe-Ib-97J" secondAttribute="bottom" constant="8" id="4AF-Bf-gCW"/>
+                                    <constraint firstItem="Qf0-KB-hie" firstAttribute="top" secondItem="eNB-V6-ydQ" secondAttribute="top" constant="8" id="7JH-V4-YAe"/>
                                     <constraint firstItem="4US-HX-dkU" firstAttribute="leading" secondItem="eNB-V6-ydQ" secondAttribute="leading" constant="8" id="Dko-oZ-bSm"/>
                                     <constraint firstItem="kMU-Tv-ufS" firstAttribute="top" secondItem="QSS-vg-7XB" secondAttribute="bottom" constant="8" id="JWy-Uw-y0j"/>
                                     <constraint firstAttribute="trailing" secondItem="kMU-Tv-ufS" secondAttribute="trailing" constant="8" id="Jn5-ff-ksB"/>
+                                    <constraint firstItem="Qf0-KB-hie" firstAttribute="leading" secondItem="4US-HX-dkU" secondAttribute="trailing" constant="8" id="Ld4-2z-dZt"/>
+                                    <constraint firstAttribute="trailing" secondItem="hbe-Ib-97J" secondAttribute="trailing" constant="161" id="RBM-1C-CCo"/>
+                                    <constraint firstItem="hbe-Ib-97J" firstAttribute="top" secondItem="Qf0-KB-hie" secondAttribute="bottom" constant="8" id="RBz-2J-NF1"/>
+                                    <constraint firstItem="hbe-Ib-97J" firstAttribute="leading" secondItem="4US-HX-dkU" secondAttribute="trailing" constant="11" id="W6W-h6-Wwd"/>
                                     <constraint firstItem="Qf0-KB-hie" firstAttribute="leading" secondItem="4US-HX-dkU" secondAttribute="trailing" constant="8" id="Wlj-7A-SxF"/>
                                     <constraint firstAttribute="bottom" secondItem="kMU-Tv-ufS" secondAttribute="bottom" constant="8" id="eQY-d3-u7P"/>
                                     <constraint firstAttribute="bottom" secondItem="4US-HX-dkU" secondAttribute="bottom" constant="8" id="hYk-LO-qFm"/>
+                                    <constraint firstItem="hbe-Ib-97J" firstAttribute="top" secondItem="Qf0-KB-hie" secondAttribute="bottom" constant="8" id="pA1-hs-cmM"/>
+                                    <constraint firstItem="Apn-fR-eEJ" firstAttribute="leading" secondItem="4US-HX-dkU" secondAttribute="trailing" constant="8" id="r2c-k3-lvA"/>
                                     <constraint firstItem="kMU-Tv-ufS" firstAttribute="leading" secondItem="4US-HX-dkU" secondAttribute="trailing" constant="8" id="rJB-ko-XV0"/>
+                                    <constraint firstAttribute="trailing" secondItem="Qf0-KB-hie" secondAttribute="trailing" constant="40" id="rv8-xi-9eD"/>
+                                    <constraint firstAttribute="trailing" secondItem="Apn-fR-eEJ" secondAttribute="trailing" constant="130" id="sBn-46-EzW"/>
                                     <constraint firstItem="4US-HX-dkU" firstAttribute="top" secondItem="eNB-V6-ydQ" secondAttribute="top" constant="8" id="sj2-0s-Ufr"/>
                                 </constraints>
                             </view>
@@ -118,21 +130,21 @@
                                 <rect key="frame" x="0.0" y="269" width="375" height="398"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y3B-Qy-TD5">
-                                        <rect key="frame" x="8" y="8" width="359" height="91"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="opq-wa-J9b">
-                                        <rect key="frame" x="8" y="86" width="359" height="217"/>
+                                        <rect key="frame" x="8" y="75" width="359" height="217"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y3B-Qy-TD5">
+                                        <rect key="frame" x="8" y="8" width="359" height="67"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" red="0.85098039215686272" green="0.85098039215686272" blue="0.85098039215686272" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
@@ -144,9 +156,12 @@
                     <navigationItem key="navigationItem" title="Detail" id="mOI-FS-AaM"/>
                     <connections>
                         <outlet property="mediaClassification" destination="Apn-fR-eEJ" id="pcx-Jv-FLn"/>
+                        <outlet property="mediaDescription" destination="y3B-Qy-TD5" id="Jfu-k5-QKu"/>
                         <outlet property="mediaEpisodeNum" destination="a3S-Da-ibx" id="omU-mJ-AKX"/>
+                        <outlet property="mediaPoster" destination="Aji-uz-Kba" id="JhQ-1l-ZDO"/>
                         <outlet property="mediaProducer" destination="QSS-vg-7XB" id="gAK-ei-epa"/>
                         <outlet property="mediaRuntime" destination="hbe-Ib-97J" id="hUt-Ok-tZI"/>
+                        <outlet property="mediaSummary" destination="opq-wa-J9b" id="jXu-wy-9rc"/>
                         <outlet property="mediaTitle" destination="Qf0-KB-hie" id="zmh-oh-uhJ"/>
                     </connections>
                 </viewController>
